crates/pixi-build-rust/src/snapshots/pixi_build_rust__build_script__test__sccache@bash.snap
---
source: crates/pixi-build-rust/src/build_script.rs
expression: "script.join(\"\\n\")"
---
export RUSTC_WRAPPER=sccache
cargo build --release --manifest-path my-prefix-dir/Cargo.toml 
mkdir -p "$PREFIX/bin"
for binary in "my-prefix-dir"/target/release/*; do
    if [ -f "$binary" ] && [ -x "$binary" ] && [[ "$(basename "$binary")" != *.* ]]; then
        cp "$binary" "$PREFIX/bin/"
    fi
done
sccache --show-stats
